# zipsa_robot

./: .gitignore  README.md  showkist-5e5d388eeae2.json  zipsa_command.txt  zipsa_command_6d_pose_estimation.txt
convert_2d_to_3d/: CMakeLists.txt
convert_2d_to_3d/src/: generate_msg.cpp  remove_segmented_region_pcl.cpp
doc/: bringup.md  charging.md  execute_demo.md  installation.md  introduction.md  living_lab_robot.rosinstall  teardown_cases.md  troubleshooting.md  zipsa_calc.ods
living_lab_robot_apps/: CMakeLists.txt  package.xml
living_lab_robot_apps/src/: demo.py  demo_for_L8424.py  demo_for_clip.py  demo_for_lamp_controll.py  demo_test_stt.py
living_lab_robot_bringup/: CMakeLists.txt  package.xml
living_lab_robot_bringup/launch/: bringup.launch  bringup_6d_pose_estimation.launch  bringup_app.launch  bringup_clip_demo.launch  bringup_gazebo.launch  bringup_hw.launch  bringup_w_all.launch  bringup_w_moveit_rviz.launch  bringup_w_navigation.launch
living_lab_robot_control/: CMakeLists.txt  package.xml
living_lab_robot_control/config/: controllers.yaml  controllers_gazebo.yaml
living_lab_robot_control/launch/: bringup.launch  bringup_gazebo.launch
living_lab_robot_control/src/: head_pan_controller.py
living_lab_robot_description/: CMakeLists.txt  package.xml
living_lab_robot_description/launch/: bringup.launch
living_lab_robot_description/meshes/: arm_base.dae  arm_link1.dae  arm_link1.stl  arm_link2.dae  arm_link3.dae  arm_link4.dae  arm_link5.dae  arm_link6.dae  body_assy.dae  c3_elv_frame_assy.dae  c3_head1_assy.dae  c3_head2_assy.dae  elevation_module.dae  elv_base.dae  elv_mount.dae  gripper.dae  head_assy.dae  head_screen.dae  head_tilt_unit.dae  hokuyo.dae  manipulator_base.dae  manipulator_link4.dae  manipulator_link5.dae  mobile_assy.dae  omni_base.dae  omni_wheel.dae  proj_pan.dae  proj_tilt.dae  robotis_arm_base.dae  robotis_arm_link1.dae  robotis_arm_link2.dae  robotis_arm_link3.dae  robotis_arm_link4.dae  robotis_arm_link5.dae  robotis_gripper.dae
living_lab_robot_description/meshes.old/: c3_elv_frame_assy.dae  robotis_arm_base.dae  robotis_arm_link1.dae  robotis_arm_link4.dae  robotis_arm_link5.dae  robotis_gripper.dae
living_lab_robot_description/urdf/: arm.urdf.xacro  body_assy.urdf.xacro  gazebo.urdf.xacro  gripper.urdf.xacro  head1_assy.urdf.xacro  head2_assy.urdf.xacro  head_assy.urdf.xacro  manipulator_arm.urdf.xacro  mobile_assy.urdf.xacro  robot.urdf.xacro  robotis_arm.urdf.xacro  robotis_gripper.urdf.xacro  transmission.urdf.xacro
living_lab_robot_dynamixel/: CMakeLists.txt  package.xml
living_lab_robot_dynamixel/config/: base.yaml  body.yaml  head.yaml
living_lab_robot_dynamixel/launch/: bringup.launch
living_lab_robot_dynamixel/scripts/: do_homing.py  go_sleep.py
living_lab_robot_gazebo/: CMakeLists.txt  package.xml
living_lab_robot_gazebo/launch/: bringup.launch
living_lab_robot_gazebo/worlds/: living_lab.world
living_lab_robot_moveit_client/: CMakeLists.txt  package.xml
living_lab_robot_moveit_client/action/: PlanExecuteNamedPose.action  PlanExecutePose.action  PlanExecutePoseConstraints.action
living_lab_robot_moveit_client/launch/: bringup.launch
living_lab_robot_moveit_client/plan/: cup_plan.pkl  milk_plan.pkl
living_lab_robot_moveit_client/src/: moveit_client_node.py  moveit_client_node_obstacle_avoidance.py
living_lab_robot_moveit_client/test/: test_6d_pose_test.py  test_named_pose.py  test_pose.py  test_pose_constraints.py  test_pose_xyz.py  test_pose_xyz_demo.py
living_lab_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
living_lab_robot_moveit_config/config/: controllers.yaml  controllers_gazebo.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  living_lab_robot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
living_lab_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  living_lab_robot_moveit_controller_manager.launch.xml  living_lab_robot_moveit_controller_manager_gazebo.launch.xml  living_lab_robot_moveit_sensor_manager.launch.xml  move_group.launch  move_group_gazebo.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  trajectory_execution_gazebo.launch.xml  warehouse.launch
living_lab_robot_navigation/: CMakeLists.txt  README.md  package.xml  rviz_navigation.rviz
living_lab_robot_navigation/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  (+5 more)
living_lab_robot_perception/: CMakeLists.txt  package.xml
living_lab_robot_perception/action/: ObjectDetect.action  PoseEstimation.action  QRCodeDetect.action  ReceiveTarget.action
living_lab_robot_perception/launch/: bringup_request.launch  bringup_seg.launch
living_lab_robot_perception/predefined_poses/: 1.npy  2.npy  3.npy  4.npy  5.npy  bleach_cleanser.npy
living_lab_robot_perception/src/: Get_joint_state_node.py  Order_target_node.py  Order_target_node_bottle.py  demo_scene_auto_playing.py  object_detector_node.py  order_sst_node.py  qrcode_detector_node.py  request_pose_estimation_node copy.py  request_pose_estimation_node.py  test_detector_node.py  u2net_demo.py
living_lab_robot_perception/src/model/: hsnet.py
living_lab_robot_perception/test/: test_qrcode_detect.py
living_lab_robot_teleop_joy/: CMakeLists.txt  package.xml
living_lab_robot_teleop_joy/config/: config.yaml
living_lab_robot_teleop_joy/launch/: bringup.launch
living_lab_robot_teleop_joy/src/: joy_control.py
living_lab_robot_twist_mux/: CMakeLists.txt  package.xml
living_lab_robot_twist_mux/config/: topics.yaml
living_lab_robot_twist_mux/launch/: twist_mux.launch
living_lab_robot_webserver/: CMakeLists.txt  package.xml
living_lab_robot_webserver/nodejs/: index.html
living_lab_robot_webserver/scripts/: bringup_server
(+14 files in other folders)
