<?xml version="1.0"?>
<package format="2">
  <name>living_lab_robot_bringup</name>
  <version>0.0.0</version>
  <description>The living_lab_robot_bringup package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/living_lab_robot_v2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>living_lab_robot_control</depend>
  <depend>living_lab_robot_description</depend>
  <depend>living_lab_robot_gazebo</depend>
  <depend>living_lab_robot_moveit_config</depend>
  <depend>living_lab_robot_navigation</depend>
  <depend>living_lab_robot_apps</depend>
  <depend>living_lab_robot_dynamixel</depend>
  <depend>living_lab_robot_moveit_client</depend>
  <depend>living_lab_robot_perception</depend>
  <depend>living_lab_robot_teleop_joy</depend>
  <depend>living_lab_robot_twist_mux</depend>

  <export>
  </export>
</package>
