<?xml version="1.0"?>
<package format="2">
  <name>living_lab_robot_control</name>
  <version>0.0.0</version>
  <description>The living_lab_robot_control package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/living_lab_robot_v2</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy</build_depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>joint_trajectory_controllers</depend>
  <depend>ros_controllers</depend>

  <export>
  </export>
</package>
