<?xml version="1.0"?>
<package format="2">
  <name>living_lab_robot_moveit_client</name>
  <version>0.0.0</version>
  <description>The living_lab_robot_moveit_client package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/living_lab_robot_v2</url>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>moveit_ros</depend>

  <export>
  </export>
</package>
