<?xml version="1.0"?>
<package format="2">
  <name>living_lab_robot_twist_mux</name>
  <version>0.0.0</version>
  <description>The living_lab_robot_twist_mux package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/living_lab_robot_v2</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>twist_mux</build_depend>
  <build_export_depend>twist_mux</build_export_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
  </export>
</package>
