<?xml version="1.0"?>
<package format="2">
  <name>living_lab_robot_webserver</name>
  <version>0.0.0</version>
  <description>The living_lab_robot_webserver package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/living_lab_robot_v2</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
